--- a/index.ipynb
+++ b/index.ipynb
@@ -120,67 +120,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "This is a python cell without valid Python so we will see an error"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "So, a cell must either be of type markdown or of type code, in which case all of the contents must be valid Python.  It cannot be both. We can quickly change a cell from markdown to code with some keyboard shortcuts.\n",
-    "\n",
-    "From escape mode, we change a cell to type code by pressing the letter `y`.\n",
-    "\n",
-    "Anytime we create a new cell, say with the shortcut key `b`, the new cell will default to code mode.  We can switch to escape mode and press the letter `m` to change the cell from code to markdown."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### View All Shortcuts\n",
-    "\n",
-    "Press the key `h` while in escape mode to view the menu for all of Jupyter's shortcuts."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Working with Python in Jupyter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ok, now that we know a little bit about adding and deleting cells, as well as changing cell types from markdown to code, let's focus on working with Python in Jupyter.  We'll go into a large amount of detail about working with a Jupyter notebook in Python, but the main takeaway is this: if we see a Python cell, we should press `shift + enter` on that cell. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The major gotcha in working with Python code is that we must execute the cells in order for Python to register the code in them. So for example, just seeing the cell where we define `name` to `'bob'` below does not write that cell to memory."
+    "error= \"This is a python cell without valid Python so we will see an error\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a python cell without valid Python so we will see an error'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "name = 'bob'"
+    "error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Yes, it's pretty confusing, but the important thing to take away is that we need to run our cells with Python code by pressing `shift + enter` if we want Python to read our variables and functions and remember them later on. Remember, in the case of assignment, the return value is `None`, which does not show an output. We can see this more concretely below by running the cell below:"
    ]
   },
   {
@@ -192,23 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-9bc0cb2ed6de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J & K are equivalent\n"
      ]
     }
    ],
    "source": [
-    "name"
+    "j=5\n",
+    "k=5\n",
+    "if j>k:\n",
+    "    print('J is greater than k')\n",
+    "else:\n",
+    "    if j<k:\n",
+    "        print('J is less than K')\n",
+    "    if j == k:\n",
+    "        print('J & K are equivalent')\n",
+    "        "
    ]
   },
   {
@@ -220,23 +196,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeffery\n",
+      "bmi: \n",
+      "23.332283589582932\n",
+      "weight is in normal standards determined by Bmi\n"
+     ]
     }
    ],
    "source": [
-    "age = 14\n",
-    "age"
+    "name= \"jeffery\"\n",
+    "heigh_m= 1.7526\n",
+    "weight_kg= 71.6676\n",
+    "\n",
+    "bmi = weight_kg / (heigh_m ** 2)\n",
+    "print (name)\n",
+    "print(\"bmi: \") \n",
+    "print(bmi)\n",
+    "\n",
+    "if bmi < 25:\n",
+    "    print(\"weight is in normal standards determined by Bmi\")\n",
+    "if bmi < 18:\n",
+    "    print(\"Bmi show under weight\")\n",
+    "if bmi > 25:\n",
+    "    print('Bmi shows over weight')\n",
+    "    \n"
    ]
   },
   {
@@ -250,10 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "hometown = 'NYC'"
@@ -268,40 +256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'NYC'"
+       "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hometown"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Yes, it's pretty confusing, but the important thing to take away is that we need to run our cells with Python code by pressing `shift + enter` if we want Python to read our variables and functions and remember them later on. Remember, in the case of assignment, the return value is `None`, which does not show an output. We can see this more concretely below by running the cell below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "None"
+    "name= ('james')\n",
+    "james= (name)\n",
+    "(name).endswith ('james')\n"
    ]
   },
   {
@@ -353,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
