--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,9 @@
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def function"
+   ]
   },
   {
    "cell_type": "markdown",
