--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def function"
+    "def function1():\n",
+    "    "
    ]
   },
   {
