Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,8 @@
    "outputs": [],
    "source": [
     "def function1():\n",
-    "    print(\"aaaaaaaaaaaah\")"
+    "    print(\"aaaaaaaaaaaah\")\n",
+    "    pri"
    ]
   },
   {
