Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "def function1():\n",
     "    print(\"aaaaaaaaaaaah\")\n",
-    "    pri"
+    "    print(aaaaaaaaaa 2)"
    ]
   },
   {
