Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,8 @@
    "source": [
     "def function1():\n",
     "    print(\"aaaaaaaaaaaah\")\n",
-    "    print(\"aaaaaaaaaa 2\")\n"
+    "    print(\"aaaaaaaaaa 2\")\n",
+    "print('')"
    ]
   },
   {
