Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     "def function1():\n",
     "    print(\"aaaaaaaaaaaah\")\n",
     "    print(\"aaaaaaaaaa 2\")\n",
-    "print('')"
+    "print('this is outside the fuction')"
    ]
   },
   {
