Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -240,16 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is outside the fuction\n",
-      "aaaaaaaaaaaah\n",
-      "aaaaaaaaaa 2\n"
+      "this is outside the fuction\n"
      ]
     }
    ],
@@ -257,8 +255,7 @@
     "def function1():\n",
     "    print(\"aaaaaaaaaaaah\")\n",
     "    print(\"aaaaaaaaaa 2\")\n",
-    "print('this is outside the fuction')\n",
-    "function1()"
+    "print('this is outside the fuction')"
    ]
   },
   {
