Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
     "heigh_m= 1.7526\n",
     "weight_kg= 71.6676\n",
     "\n",
-    "bmi = weight_kg / (heigh_m ** 2)\n",
+    "def fubmi = weight_kg / (heigh_m ** 2)\n",
     "print (name)\n",
     "print(\"bmi: \") \n",
     "print(bmi)\n",
