Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,9 +204,18 @@
      "output_type": "stream",
      "text": [
       "jeffery\n",
-      "bmi: \n",
-      "23.332283589582932\n",
-      "weight is in normal standards determined by Bmi\n"
+      "bmi: \n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'bmi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-92246e5cffe5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bmi: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbmi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbmi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bmi' is not defined"
      ]
     }
    ],
@@ -215,7 +224,7 @@
     "heigh_m= 1.7526\n",
     "weight_kg= 71.6676\n",
     "\n",
-    "def fubmi = weight_kg / (heigh_m ** 2)\n",
+    "def function1(): bmi = weight_kg / (heigh_m ** 2)\n",
     "print (name)\n",
     "print(\"bmi: \") \n",
     "print(bmi)\n",
