--- a/index.ipynb
+++ b/index.ipynb
@@ -196,26 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "jeffery\n",
-      "bmi: \n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'bmi' is not defined",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-4-8af81413c5d8>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-92246e5cffe5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bmi: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbmi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbmi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m25\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bmi' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-8af81413c5d8>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    bmi = weight_kg / (heigh_m ** 2)\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -224,7 +213,9 @@
     "heigh_m= 1.7526\n",
     "weight_kg= 71.6676\n",
     "\n",
-    "def function1(): bmi = weight_kg / (heigh_m ** 2)\n",
+    "def function1(): \n",
+    "\n",
+    "bmi = weight_kg / (heigh_m ** 2)\n",
     "print (name)\n",
     "print(\"bmi: \") \n",
     "print(bmi)\n",
