Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,15 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-4-8af81413c5d8>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-8af81413c5d8>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    bmi = weight_kg / (heigh_m ** 2)\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeffery\n",
+      "bmi: \n",
+      "23.332283589582932\n",
+      "weight is in normal standards determined by Bmi\n"
      ]
     }
    ],
@@ -212,8 +214,6 @@
     "name= \"jeffery\"\n",
     "heigh_m= 1.7526\n",
     "weight_kg= 71.6676\n",
-    "\n",
-    "def function1(): \n",
     "\n",
     "bmi = weight_kg / (heigh_m ** 2)\n",
     "print (name)\n",
